Fri Nov  6 17:21:38 1998  Doug Evans  <devans@canuck.cygnus.com>

	* m32r-asm.c: Regenerate.

start-sanitize-fr30
Wed Nov  4 18:46:47 1998  Dave Brolley  <brolley@cygnus.com>

	* configure.in: Added case for bfd_fr30_arch.
	* Makefile.am (CFILES): Added fr30-asm.c, fr30-dis.c, fr30-opc.c.
	(ALL_MACHINES): Added fr30-asm.lo, fr30-dis.lo, fr30-opc.lo.
	(CLEANFILES): Added stamp-fr30.
	(FR30_DEPS): Added.
	* fr30-asm.c: New file.
	* fr30-dis.c: New file.
	* fr30-opc.c: New file.
	* fr30-opc.h: New file.
	* po/POTFILES.in: Regenerated
	* po/opcodes.pot: Regenerated

end-sanitize-fr30
start-sanitize-m32rx
Mon Nov  2 20:08:03 1998  Doug Evans  <devans@canuck.cygnus.com>

	* m32r-opc.c (m32r_cgen_insn_table_entries): Add FILL_SLOT attribute
	to bcl8,bncl8 entries.
	(macro_insn_table_entries): Add FILL_SLOT attribute
	to bcl8r,bncl8r entries.

end-sanitize-m32rx
Mon Nov  2 15:05:33 1998  Geoffrey Noer  <noer@cygnus.com>

        * configure.in: detect cygwin* instead of cygwin32*
        * configure: regenerate

Tue Oct 27 08:58:37 1998  Gavin Romig-Koch  <gavin@cygnus.com>

	* mips-opc.c (IS_M): Added.

start-sanitize-r5900
Fri Oct 23 12:06:00 EDT 1998  Frank Ch. Eigler <fche@cygnus.com>

	* mips-opc.c (vrget, vclipw, vrnext): Correct COP2 opcodes
	and masks. 

end-sanitize-r5900
Mon Oct 19 13:03:19 1998  Doug Evans  <devans@seba.cygnus.com>

start-sanitize-cygnus
	* cgen-asm.in (insert_1): New function.
	(insert_normal): Progress on handling ! CGEN_INT_INSN_P.
	(insert_insn_normal): Update handling of CGEN_INT_INSN_P.
	(@arch@_cgen_assemble_insn): Update type of `buf' arg.
	* cgen-dis.in (extract_1): New function.
	(extract_normal): buf_ctrl renamed to ex_info, update type.
	Progress on handling of CGEN_INT_INSN_P.
	(extract_insn_normal): buf_ctrl renamed to ex_info, update type.
	Update handling of CGEN_INT_INSN_P.  Handle errors from
	@arch@_cgen_extract_operand.
	(print_insn): Renamed from print_int_insn.  Handle ! CGEN_INT_INSN_P.